Fix hdiutil info command in workflow - remove invalid usage

--- a/.github/workflows/build-universal-dmg.yml
+++ b/.github/workflows/build-universal-dmg.yml
@@ -132,7 +132,7 @@ jobs:
       - name: Verify DMG
         run: |
           hdiutil verify "Vagrant Manager-${{ steps.get_version.outputs.VERSION_NAME }}-${{ steps.archs.outputs.arch_suffix }}.dmg"
-          hdiutil info "Vagrant Manager-${{ steps.get_version.outputs.VERSION_NAME }}-${{ steps.archs.outputs.arch_suffix }}.dmg"
+          echo "DMG verification completed successfully"
       
       - name: Get DMG size
         id: dmg_size
