chore(general): 项目维护
变更文件:
  📝 Rakefile
  📝 Vagrant Manager/AboutWindow.m
  📝 Vagrant Manager/Vagrant Manager-Info.plist

--- a/Vagrant Manager/Vagrant Manager-Info.plist
+++ b/Vagrant Manager/Vagrant Manager-Info.plist
@@ -38,7 +38,7 @@
 	<key>NSAppleEventsUsageDescription</key>
 	<string>This app uses apple events to communicate with terminal applications</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2014 Lanayo Technology</string>
+	<string>Copyright © 2025 kk</string>
 	<key>NSMainNibFile</key>
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
